# my_game_1

./: .gitignore  CMakeLists.txt  README.md  attributions.txt
source/: button.h  buttonManager.h  character.cpp  character.h  icons.cpp  icons.h  magicBox.h  main.cpp  mapGeneric.cpp  mapGeneric.h  object.h
